# pMMC

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.bat  build_wsl.sh  config.ini
MSVC++/: cudaMMC.vcxproj  pMMC.sln  pMMC.vcxproj
MSVC++/pMMC-analyze/: main_analyze.cpp
MSVC++/pMMC-convert/: pMMC-convert.vcxproj
MSVC++/pMMC-lib/: pMMC-lib.vcxproj
MSVC++/pMMC-reconstruct/: pMMC-reconstruct.vcxproj
auxiliary/configs/: analyze_distmap.ini  analyze_ensemble.ini  analyze_position.ini  benchmark.ini  convert_merge.ini  generate_synthetic.ini  reconstruct_chiapet.ini  reconstruct_hla_hic.ini
auxiliary/scripts/: build_wsl.sh  compare_hla_pdbs.py  coords_to_pdb.py  extract_hla_chr6.py  generate_flowchart.py  pmmc_best_of_n.py  run_flamingo_basic.R  run_flamingo_hla.R  run_flamingo_hla.py  shrec3d.py
auxiliary/scripts/benchmarks/: run_benchmark.sh  run_ensemble_benchmark.sh  run_scalability.sh
bash_scripts_for_benchmarking/: run_quality_comparison.sh  run_resource_monitor.sh  run_speed_benchmark.sh
include/: Anchor.h  AppCommon.hpp  BedRegion.h  BedRegion.hpp  BedRegions.h  BedRegions.hpp  BenchmarkRunner.h  BenchmarkRunner.hpp  Chromosome.h  ChromosomesSet.h  CifWriter.h  Cluster.h  Cluster.hpp  Density.h  DistanceMapGenerator.h  GenomeReconstructor.h  Heatmap.h  Heatmap.hpp  HeatmapImageWriter.h  HeatmapImageWriter.hpp  HierarchicalChromosome.h  IbedFileIO.h  InteractionArc.h  InteractionArcs.h  InteractionArcs.hpp  LooperSolver.h  LooperSolver.hpp  MdsInitializer.h  MdsInitializer.hpp  MergedFileIO.h  MetricsFramework.h  MultiscaleEnergy.h  PdbWriter.h  PdbWriter.hpp  PicturePanel.hpp  Settings.h  Settings.hpp  SimulationLogger.h  SphericalContainer.hpp  Static.hpp  (+3 more)
ready_to_use_ini_files/: analyze_distance.ini  analyze_metrics.ini  analyze_rewiring.ini  convert_extract.ini  convert_flatten.ini  convert_smooth.ini  convert_to_pdb.ini  reconstruct_ensemble.ini  reconstruct_hic.ini
src/: Anchor.cpp  BedRegion.cpp  BedRegions.cpp  BenchmarkRunner.cpp  CifWriter.cpp  DistanceMapGenerator.cpp  GenomeReconstructor.cpp  HeatmapImageWriter.cpp  HierarchicalChromosome.cu  IbedFileIO.cpp  InteractionArc.cpp  InteractionArcs.cpp  LooperSolver.cpp  MdsInitializer.cpp  MergedFileIO.cpp  MetricsFramework.cpp  MultiscaleEnergy.cpp  ParallelMarkArcs.cu  ParallelMonteCarloArcs.cu  ParallelMonteCarloHeatmap.cu  ParallelMonteCarloSmooth.cu  PdbWriter.cpp  Settings.cpp  SimulationLogger.cpp  SyntheticGenerator.cpp  chromosome.cpp  chromosomesset.cpp  cluster.cpp  density.cpp  heatmap.cpp  main.cpp
src/apps/: pMMC.sln
src/apps/pMMC-analyze/: pMMC-analyze.vcxproj
src/apps/pMMC-benchmark/: main_benchmark.cpp  pMMC-benchmark.vcxproj
src/apps/pMMC-convert/: main_convert.cpp
src/apps/pMMC-flowchart/: main_flowchart.cpp  pMMC-flowchart.vcxproj
src/apps/pMMC-generate/: main_generate.cpp  pMMC-generate.vcxproj
src/apps/pMMC-reconstruct/: main_reconstruct.cpp
src/include/: Anchor.hpp  Chromosome.hpp  ChromosomesSet.hpp  CifWriter.hpp  ContactMatrixIO.hpp  Density.hpp  DistanceMapGenerator.hpp  FlowchartGenerator.hpp  GenomeReconstructor.hpp  HierarchicalChromosome.h  IbedFileIO.hpp  InteractionArc.hpp  InteractionArcs.hpp  LooperSolver.hpp  MergedFileIO.hpp  MetricsFramework.hpp  MultiscaleEnergy.hpp  SaveModelWithFormat.hpp  Settings.hpp  SimulationLogger.hpp  Static.hpp  SvgChartGenerator.hpp  VisualizationScripts.hpp
test/: build_and_test.bat  ci_local.bat  run_benchmarks.bat  test_determinism.bat  test_interchrom.bat
